--- a/rel275c/styles/style-creation.css
+++ b/rel275c/styles/style-creation.css
@@ -66,7 +66,22 @@ h4{
 #hero-msg h4{
     text-align: center;
 }
+.two-img{
+    width: 40%;
+}
+.three-img{
+    width: 40%;
+}
 .four-img{
+    width: 40%;
+}
+.five-img{
+    width: 40%;
+}
+.six-img{
+    width: 40%;
+}
+.seven-img{
     width: 40%;
 }
 .h2{
