--- a/rel275c/styles/style-creation.css
+++ b/rel275c/styles/style-creation.css
@@ -60,11 +60,22 @@ h4{
     line-height: 2;
     font-size: 18px
 }
+.h4{
+    color: black;
+    margin: auto;
+    width: 50%;
+    padding-top: 5px;
+    line-height: 2;
+    font-size: 18px
+}
 #hero-msg h1{
     text-align: center;
 }
 #hero-msg h4{
     text-align: center;
+}
+.one-img{
+    width: 40%;
 }
 .two-img{
     width: 40%;
