--- a/rel275c/styles/style-index.css
+++ b/rel275c/styles/style-index.css
@@ -16,17 +16,25 @@ nav {
     background-color: white;
     line-height: 3em;
     text-align: center;
-    font-size: 1.2em;
+    font-size: 1.1em;
     font-weight: bold;
     width: 100%;
     list-style-type: none;
     display: flex;
   }
-nav a{
+.tag{
     padding:1em;
     min-width: 120px;
     text-decoration: none;
     padding: 20px;
+    width: 5%;
+}
+#adam-and-eve-tag{
+    padding:1em;
+    min-width: 120px;
+    text-decoration: none;
+    padding: 20px;
+    width: 15%;
 }
 nav a:link, nav a:visited{
     color: black;
