--- a/rel275c/styles/style-index.css
+++ b/rel275c/styles/style-index.css
@@ -16,7 +16,7 @@ nav {
     background-color: white;
     line-height: 3em;
     text-align: center;
-    font-size: 1.1em;
+    font-size: 100%;
     font-weight: bold;
     width: 100%;
     list-style-type: none;
@@ -24,17 +24,17 @@ nav {
   }
 .tag{
     padding:1em;
-    min-width: 120px;
+    min-width: 10%;
     text-decoration: none;
-    padding: 20px;
-    width: 5%;
+    padding: 10px;
+    width: 100%;
 }
 #adam-and-eve-tag{
     padding:1em;
-    min-width: 120px;
+    min-width: 10%;
     text-decoration: none;
-    padding: 20px;
-    width: 15%;
+    padding: 10px;
+    width: 100%;
 }
 nav a:link, nav a:visited{
     color: black;
@@ -48,7 +48,7 @@ nav a:hover{
 }
 #hero-img{
     width: 100%;
-    padding-top: 100px;
+    padding-top: 70px;
 }
 .home-title{
     color: black;
