--- a/rel275c/styles/style-natural-man.css
+++ b/rel275c/styles/style-natural-man.css
@@ -15,17 +15,25 @@ nav {
     background-color: white;
     line-height: 3em;
     text-align: center;
-    font-size: 1.2em;
+    font-size: 100%;
     font-weight: bold;
     width: 100%;
     list-style-type: none;
     display: flex;
-}
-nav a {
+  }
+.tag{
     padding:1em;
-    min-width: 120px;
+    min-width: 10%;
     text-decoration: none;
-    padding: 20px;
+    padding: 10px;
+    width: 100%;
+}
+#adam-and-eve-tag{
+    padding:1em;
+    min-width: 10%;
+    text-decoration: none;
+    padding: 10px;
+    width: 100%;
 }
 nav a:link, nav a:visited {
     color: black;
