fix some missing requirements

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -87,8 +87,8 @@ footer a{
     text-decoration: none;
 }
 footer a:hover{
-    color: #598987;
-    text-decoration: underline;
+    color: rgb(1, 58, 58);
+    text-decoration: none;
 }
 .icon{
     width: 80px;
