--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Lemon&family=Roboto&family=Ubuntu:wght@500&display=swap');
+
 header{
     background-color: #d8f2da;
 }
 .logo{
     width: 80px;
+}
+#log_link{
+    padding-top: 5px;
 }
 #content{
     max-width: 1600px;
@@ -12,6 +17,7 @@ nav a{
     text-align: center;
     color: #598987;
     text-decoration: none;
+    padding: 35px;
 }
 nav a:hover{
     background-color: #598987;
@@ -25,19 +31,33 @@ nav a:hover{
 }
 .home-title{
     color: #598987;
+    font-family: Lemon, Helvetica, sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 h4{
     color: #598987;
 }
-.book {
-    background-color: #fcfbfb;
-    color: #598987;
+.book{
+    background-color: cadetblue;
+    color: white;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .join{
-    background-color: #d8f2da;
-    color: #598987;
+    background-color: cadetblue;
+    color: white;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+.card-img {
+    border: 10px solid #d9c2a3;
 }
 .book:hover{
     background-color: #598987;
@@ -52,15 +72,24 @@ h4{
 }
 #hero-msg h4{
     text-align: center;
+    font-family: Lemon, Helvetica, sans-serif;
+}
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
 }
 .msg{
     background-color: #d8f2da;
+    line-height: 1.5em;
+    padding: 35px;
 }
 .msg h2{
     color: #598987;
+    font-family: Lemon, Helvetica, sans-serif;
 }
 .msg p{
     color: #598987;
+    font-size: 0.8em;
+    padding-bottom: 15px;
 }
 .button-box{
     text-align: center;
@@ -68,8 +97,22 @@ h4{
 main section{
     text-align: center;
 }
+main section img {
+    box-sizing: border-box;
+}
+main h2{
+    font-family: Ubuntu, Helvetica, sans-serif;
+}
 body{
     background-color: #fcfbfb; 
+    font-family: Roboto, Helvetica, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+
+}
+h2{
+    margin: 0;
 }
 #background{
     height: 725px;
@@ -78,6 +121,8 @@ body{
 footer{
     color: #598987;
     background-color: #d8f2da;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer p{
     font-size: 1.2em;
@@ -90,6 +135,10 @@ footer a:hover{
     color: rgb(1, 58, 58);
     text-decoration: none;
 }
+footer .social img{
+padding-top: 15px;
+}
 .icon{
     width: 80px;
+    padding-top: 10px;
 }
