--- a/ice_challenge/style.css
+++ b/ice_challenge/style.css
@@ -1,62 +1,42 @@
-body{
-    max-width: 1600px;
-    display: block;
-    margin: auto;
+/* background color for right side #B9B8B9 */
+  @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@594&display=swap');
+
+body {
+    margin: 0;
+    padding: 0;
 }
-#main_img{
-    text-align: center;
+
+section {
+    display: grid;
     width: 100%;
-    background-color: dimgrey;
-    display: block;
+    height: 100%;
+    background: linear-gradient(to right, white 50%, #B9B8B9 50%);
+    grid-template-columns: 1fr 1fr;
 }
 h1{
-    display: block;
-    max-width: 1600px;
-    background-color: aliceblue;
+    font-family: Playfair+Display;
+    font-size: 4cm;
+    grid-column: 1/3;
+    max-width: 100%;
     position: absolute;
-    top: 20px;
-    left: auto;
-    right: auto;
-    font-size: 300%;
+    top: 10px;
+    right: 5cm;
+    letter-spacing: .19em;
+}
+
+h3{
+    color: #971D20;
+    font-family: Playfair+Display;
+    font-size: 6em;
     text-align: center;
-}
-.image_bar{
-    background-color: dimgrey;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-
-#desk{
-    display: block;
-    border-radius: 50%;
-    width: 60%;
-    margin: auto;
-    margin-top: 2cm;
-    margin-bottom: 2cm;
-    border: 0.4cm solid #2A3439;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    padding-top: 45%;
+    letter-spacing: 15px;
 }
 
-#logo{
-    display: block;
-    border-radius: 50%;
-    width: 60%;
-    margin: auto;
-    margin-top: 2cm;
-    margin-bottom: 2cm;
-    border: 0.4cm solid #2A3439;
-}
-
-#person{
-    display: block;
-    border-radius: 50%;
-    width: 60%;
-    margin: auto;
-    margin-top: 2cm;
-    margin-bottom: 2cm;
-    border: 0.4cm solid #2A3439;
-}
-p{
-    text-align: center;
-    font-size: 1cm;
-    font-weight: 900;
+#cherries {
+  width: 80%;
+  grid-column: 1/2;
+  grid-row: 1/2;
 }
