--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lemon&family=Roboto&family=Ubuntu:wght@500&display=swap');
 
 header{
+    display: grid;
+    grid-template-columns: 150px auto;
     background-color: #d8f2da;
 }
 .logo{
@@ -8,10 +10,16 @@ header{
 }
 #log_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 #content{
     max-width: 1600px;
     margin: 0 auto;
+}
+nav{
+    display: flex;
+    justify-content: space-around;
 }
 nav a{
     text-align: center;
@@ -23,8 +31,30 @@ nav a:hover{
     background-color: #598987;
     color: white;
 }
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
 #hero-box{
     text-align: center;
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+#hero-msg h1{
+    text-align: center;
+    color: white;
+}
+#hero-msg h4{
+    text-align: center;
+    color: white;
+    font-family: Lemon, Helvetica, sans-serif;
 }
 #hero-img{
     width: 1600px;
@@ -56,8 +86,21 @@ h4{
     margin-top: 50px;
     border-radius: 5px;
 }
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
 .card-img {
     border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.card-img, .mountains {
+    width: 100%;
 }
 .book:hover{
     background-color: #598987;
@@ -67,20 +110,34 @@ h4{
     background-color: #598987;
     color: white
 }
-#hero-msg h1{
-    text-align: center;
-}
-#hero-msg h4{
-    text-align: center;
-    font-family: Lemon, Helvetica, sans-serif;
-}
+
 .rivers-card, .camping-card, .rapids-card{
     margin: 200px 0;
+}
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains{
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .msg{
     background-color: #d8f2da;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .msg h2{
     color: #598987;
@@ -117,12 +174,17 @@ h2{
 #background{
     height: 725px;
     background-color: #FFBF1F;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 footer{
     color: #598987;
     background-color: #d8f2da;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer p{
     font-size: 1.2em;
@@ -141,4 +203,48 @@ padding-top: 15px;
 .icon{
     width: 80px;
     padding-top: 10px;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
