finished home page

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -4,14 +4,15 @@ header{
     display: grid;
     grid-template-columns: 150px auto;
     background-color: #d8f2da;
+    opacity: .8
 }
 .logo{
     width: 80px;
 }
-#log_link{
-    padding-top: 5px;
+#logo_link{
     justify-self: center;
     align-self: center;
+    padding-top: 5px;
 }
 #content{
     max-width: 1600px;
