--- a/wwr/styles/rivers.css
+++ b/wwr/styles/rivers.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lemon&family=Roboto&family=Ubuntu:wght@500&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
 header{
     display: grid;
     grid-template-columns: 150px auto;
@@ -78,79 +82,77 @@ h4{
     margin-top: 50px;
     border-radius: 5px;
 }
-.join{
-    background-color: cadetblue;
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 15px 30px;
-    margin-top: 50px;
-    border-radius: 5px;
-}
-.home-grid{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-}
-.card-img {
-    border: 10px solid #d9c2a3;
-    transition: transform .5s;
-    box-shadow: 5px 5px 10px #6f7364;
-}
-.card-img:hover {
-    opacity: .6;
-    transform: scale(1.1);
-}
-.card-img, .mountains {
-    width: 100%;
-}
 .book:hover{
     background-color: #598987;
     color: white
 }
-.join:hover{
-    background-color: #598987;
-    color: white
-}
-
-.rivers-card, .camping-card, .rapids-card{
-    margin: 200px 0;
-}
-.rivers-card{
-    grid-column: 2/4;
-    grid-row: 2/3;
-}
-.camping-card{
-    grid-column: 5/7;
-    grid-row: 2/3;
-}
-.rapids-card{
-    grid-column: 8/10;
-    grid-row: 2/3;
-}
-.mountains{
-    grid-column: 2/7;
-    grid-row: 5/8;
-    box-shadow: 5px 5px 10px #6f7364;
-}
-.msg{
-    background-color: #d8f2da;
-    line-height: 1.5em;
-    padding: 35px;
-    grid-column: 6/10;
-    grid-row: 6/7;
-    box-shadow: 5px 5px 10px #6f7364;
-}
-.msg h2{
-    color: #598987;
-    font-family: Lemon, Helvetica, sans-serif;
-}
-.msg p{
-    color: #598987;
-    font-size: 0.8em;
-    padding-bottom: 15px;
-}
 .button-box{
     text-align: center;
+}
+.top-main{
+    display: grid;
+    grid-template-columns: 100px 50px 1fr 40px 1fr 100px;
+    grid-template-rows: 50px 1fr 1fr 1fr 1fr;
+}
+.mid-main{
+    display: grid;
+    grid-template-columns: 100px 50px 1fr 40px 1fr 100px;
+    grid-template-rows: 50px 1fr 1fr 1fr 1fr;
+}
+.bottom-main{
+    display: grid;
+    grid-template-columns: 100px 50px 1fr 40px 1fr 100px;
+    grid-template-rows: 50px 1fr 1fr 1fr 1fr;
+}
+.nav-icon{
+    width: 40px;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    align-self: center;
+}
+.subtitle{
+    grid-column: 3/4;
+    grid-row: 1/2;
+    text-align: left;
+    align-self: center;
+}
+.paragraph1{
+    grid-column: 2/4;
+    grid-row: 2/3;
+    font-family: Roboto, Helvetica, sans-serif;
+    font-size: 18px;
+    text-align: left;
+    align-self: center;
+}
+.paragraph2{
+    grid-column: 2/4;
+    grid-row: 3/4;
+    font-family: Roboto, Helvetica, sans-serif;
+    font-size: 18px;
+    text-align: left;
+    align-self: center;
+}
+.paragraph3{
+    grid-column: 2/4;
+    grid-row: 4/5;
+    font-family: Roboto, Helvetica, sans-serif;
+    font-size: 18px;
+    text-align: left;
+    align-self: center;
+}
+.location{
+    width: 600px;
+    grid-column: 5/6;
+    grid-row: 2/5;
+    align-self: center;
+}
+.map{
+    margin: auto;
+    text-align: center;
+}
+h2{
+    text-align: center;
+    font-family: Ubuntu, Helvetica, sans-serif;
 }
 main section{
     text-align: center;
@@ -158,7 +160,10 @@ main section{
 main section img {
     box-sizing: border-box;
 }
-main h2{
+main h3{
+    font-family: Ubuntu, Helvetica, sans-serif;
+}
+main p{
     font-family: Ubuntu, Helvetica, sans-serif;
 }
 body{
@@ -169,14 +174,8 @@ body{
     padding: 0;
 
 }
-h2{
+h3{
     margin: 0;
-}
-#background{
-    height: 725px;
-    background-color: #FFBF1F;
-    grid-column: 1/11;
-    grid-row: 4/9;
 }
 footer{
     color: #598987;
@@ -232,18 +231,6 @@ padding-top: 15px;
     }
     .home-title {
         font-size: 25px;
-    }
-    .rivers-card, .camping-card, .rapids-card { 
-        margin: 50px auto;
-        width: 60%;
-    }
-    #background {
-        display: none;
-    }
-    .mountains, .msg {
-        width: 80%;
-        display: block;
-        margin: 0 auto;
     }
     footer {
         margin-top: 25px;
