--- a/final-project/styles/index.css
+++ b/final-project/styles/index.css
@@ -47,3 +47,30 @@ body{
     margin: auto;
     text-align: center;
 }
+i{
+    color: #e4e2dd;
+    font-size: 35px;
+    align-items: center;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+footer{
+    height: 100px;
+    color: #e4e2dd;
+    background-color: #12181C;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+footer p{
+    font-size: 1em;
+}
+footer a{
+    color: #e4e2dd;
+    text-decoration: none;
+}
+footer a:hover{
+    color: #0ef;
+    text-decoration: none;
+}
