--- a/final-project/styles/index.css
+++ b/final-project/styles/index.css
@@ -8,14 +8,14 @@ nav{
     width: 100%;
     list-style-type: none;
     display: grid;
-    color: #e4e2dd;
+    color: white;
     grid-template-columns: 1fr 1fr 1fr 400px 1fr 1fr 1fr;
     text-align: center;
     font-size: 1.2em;
     padding-top: 20px;
 }
 nav a{
-    color: #e4e2dd;
+    color: white;
     position: relative;
     font-size: 0.8em;
     min-width: 80px;
@@ -26,7 +26,7 @@ nav a{
 }   
     
 nav a:hover {
-    color: #e4e2dd;
+    color: #0ef;
     border-bottom: 2px solid #0ef;
     border-radius: 15px;
     transform: scale(1) translateY(-5px);
@@ -84,7 +84,7 @@ body{
 }
 #purpose{
     display: grid;
-    grid-template-columns: 15% 1fr 60px 1fr 15%;
+    grid-template-columns: 15% 1fr 50px 1fr 15%;
     grid-template-rows: 50px 50px 1fr 50px;
     margin: 50px;
 }
@@ -105,7 +105,8 @@ body{
     align-self: center;
     font-size: 20px;
     padding-top: 30px;
-    font-family: 'Roboto', Courier, monospace;
+    font-family: 'Anta', Courier, monospace;
+    font-weight: 400;
 }
 #about-us{
     background-color: #292929;
@@ -118,6 +119,7 @@ body{
     font-family: 'Anta', Courier, monospace;
     transform: scale(1) translateY(-5px);
     transition: .5s;
+    font-weight: bold;
 }
 #about-us:hover{
     background-color: black;
@@ -168,7 +170,7 @@ h2{
     align-self: center;
 }
 i{
-    color: #e4e2dd;
+    color: white;
     font-size: 35px;
     align-items: center;
     padding-left: 5px;
@@ -176,7 +178,7 @@ i{
 }
 footer{
     height: 100px;
-    color: #e4e2dd;
+    color: white;
     background-color: #292929;
     margin: 0 auto;
     display: flex;
@@ -186,9 +188,10 @@ footer{
 footer p{
     font-size: 1em;
     font-family: 'Anta', Courier, monospace;
+    font-weight: bold;
 }
 footer a{
-    color: #e4e2dd;
+    color: white;
     text-decoration: none;
 }
 footer a:hover{
