--- a/final-project/styles/index.css
+++ b/final-project/styles/index.css
@@ -60,12 +60,13 @@ body{
     right: 0%;
 }
 .top-section p{
-    font-family: 'Roboto', Courier, monospace;
+    font-family:'Anta', Courier, monospace;
     font-size: 1.2em;
     color: white;
     margin-top: -10px;
     padding-bottom: 20px;
-    font-weight: 450;
+    font-weight: bold;
+    
 }
 #see-more{
     background-color: white;
@@ -222,22 +223,22 @@ footer a:hover{
         margin: 0;
         padding: 0;
         margin: 0 auto;
+        padding-bottom: 20px;
     }
     nav a {
         display: block;
         height: auto;
     }
-
+    .cover_img{
+        margin-top: 0;
+    }
     #top-div {
         margin-top: 0;
     }
     .top-section {
-        margin-top: 50px;
+        margin-top: 180px;
         position: absolute;
         top: 300px;
-    }
-    .top-section p {
-        display: none;
     }
     .home-title {
         font-size: 35px;
