updated line-height to 1.6em

--- a/final-project/styles/index.css
+++ b/final-project/styles/index.css
@@ -110,6 +110,7 @@ body{
     padding-top: 30px;
     font-family: 'Anta', Courier, monospace;
     font-weight: 400;
+    line-height: 1.6em;
 }
 #about-us{
     background-color: #292929;
