--- a/final-project/styles/index.css
+++ b/final-project/styles/index.css
@@ -1,20 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Anta&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 header{
+    display: grid;
     width: 100%;
     background-color: #292929;
+    grid-template-columns: 1fr 300px 1fr;
 }
-nav{
+.left-nav{
+    display: grid;
+    grid-template-columns: 1f 1fr 1fr;
+    grid-column: 1/2;
     width: 100%;
     list-style-type: none;
-    display: grid;
     color: white;
-    grid-template-columns: 1fr 1fr 1fr 400px 1fr 1fr 1fr;
     text-align: center;
     font-size: 1.2em;
-    padding-top: 20px;
+    column-gap: 5px;
 }
-nav a{
+.left-nav a{
     color: white;
     position: relative;
     font-size: 0.8em;
@@ -23,29 +26,94 @@ nav a{
     transition: .5s;
     font-family: 'Anta', Courier, monospace;
     font-weight: bold;
-}   
-    
-nav a:hover {
+}
+.left-nav a:hover {
     color: #0ef;
+    padding-bottom: 10px;
     border-bottom: 2px solid #0ef;
     border-radius: 15px;
     transform: scale(1) translateY(-5px);
     transition: .5s;
 }
-.tag{
+.right-nav{
+    display: grid;
+    grid-template-columns: 1f 1fr 1fr;
+    grid-column: 3/4;
+    width: 100%;
+    list-style-type: none;
+    color: white;
+    text-align: center;
+    font-size: 1.2em;
+    column-gap: 5px;
+}
+.right-nav a{
+    color: white;
+    position: relative;
+    font-size: 0.8em;
+    min-width: 80px;
+    text-decoration: none;
+    transition: .5s;
+    font-family: 'Anta', Courier, monospace;
+    font-weight: bold;
+}
+.right-nav a:hover {
+    color: #0ef;
+    padding-bottom: 10px;
+    border-bottom: 2px solid #0ef;
+    border-radius: 15px;
+    transform: scale(1) translateY(-5px);
+    transition: .5s;
+}
+.left-nav a{
     width: 100%;
     text-decoration: none;
-    padding-top: 25px;
 } 
+.right-nav a{
+    width: 100%;
+    text-decoration: none;
+} 
+.tag1{
+    display: grid;
+    grid-column: 1/2;
+    align-self: center;
+}
+.tag2{
+    display: grid;
+    grid-column: 2/3;
+    align-self: center;
+}
+.tag3{
+    display: grid;
+    grid-column: 3/4;
+    align-self: center;
+}
+.tag4{
+    display: grid;
+    grid-column: 1/2;
+    align-self: center;
+}
+.tag5{
+    display: grid;
+    grid-column: 2/3;
+    align-self: center;
+}
+.tag6{
+    display: grid;
+    grid-column: 3/4;
+    align-self: center;
+}
 .logo{
+    grid-column: 2/3;
     width: 100px;
-    padding: 10px;
     margin: 0 auto;
+    align-self: center;
+    z-index: 2;
+    padding: 20px;
     align-self: center;
 }
 .cover_img{
     width: 100%;
-    margin-top: -150px;
+    margin-top: -125px;
 }
 body{
     max-width: 1600px;
@@ -59,11 +127,14 @@ body{
     left: 0%;
     right: 0%;
 }
+.home-title{
+    font-size: 3.5em;
+}
 .top-section p{
     font-family:'Anta', Courier, monospace;
-    font-size: 1.2em;
+    font-size: 1.8em;
     color: white;
-    margin-top: -10px;
+    margin-top: -20px;
     padding-bottom: 20px;
     font-weight: bold;
     
@@ -82,7 +153,7 @@ body{
     font-weight: bold;
 }
 #see-more:hover{
-    background-color: #292929;
+    background-color: #0ef;
     color: white;
 }
 #purpose{
@@ -126,9 +197,8 @@ body{
     font-weight: bold;
 }
 #about-us:hover{
-    background-color: black;
+    background-color: #0ef;
     color: white;
-    
 }
 h1{
     font-family: 'Anta', Courier, monospace;
