--- a/final-project/styles/aboutus.css
+++ b/final-project/styles/aboutus.css
@@ -1,42 +1,114 @@
+@import url('https://fonts.googleapis.com/css2?family=Anta&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 header{
+    display: grid;
     width: 100%;
     background-color: #292929;
+    grid-template-columns: 1fr 300px 1fr;
 }
-nav{
+.left-nav{
+    display: grid;
+    grid-template-columns: 1f 1fr 1fr;
+    grid-column: 1/2;
     width: 100%;
     list-style-type: none;
-    display: grid;
-    color: #e4e2dd;
-    grid-template-columns: 1fr 1fr 1fr 400px 1fr 1fr 1fr;
+    color: white;
     text-align: center;
     font-size: 1.2em;
-    padding-top: 20px;
+    column-gap: 10px;
 }
-nav a{
-    color: #e4e2dd;
+.left-nav a{
+    color: white;
     position: relative;
     font-size: 0.8em;
     min-width: 80px;
     text-decoration: none;
     transition: .5s;
-}   
-    
-nav a:hover {
-    color: #e4e2dd;
+    font-family: 'Anta', Courier, monospace;
+    font-weight: bold;
+}
+.left-nav a:hover {
+    color: #0ef;
+    padding-bottom: 10px;
     border-bottom: 2px solid #0ef;
     border-radius: 15px;
     transform: scale(1) translateY(-5px);
     transition: .5s;
 }
-.tag{
+.right-nav{
+    display: grid;
+    grid-template-columns: 1f 1fr 1fr;
+    grid-column: 3/4;
+    width: 100%;
+    list-style-type: none;
+    color: white;
+    text-align: center;
+    font-size: 1.2em;
+    column-gap: 10px;
+}
+.right-nav a{
+    color: white;
+    position: relative;
+    font-size: 0.8em;
+    min-width: 80px;
+    text-decoration: none;
+    transition: .5s;
+    font-family: 'Anta', Courier, monospace;
+    font-weight: bold;
+}
+.right-nav a:hover {
+    color: #0ef;
+    padding-bottom: 10px;
+    border-bottom: 2px solid #0ef;
+    border-radius: 15px;
+    transform: scale(1) translateY(-5px);
+    transition: .5s;
+}
+.left-nav a{
     width: 100%;
     text-decoration: none;
-    padding-top: 25px;
 } 
+.right-nav a{
+    width: 100%;
+    text-decoration: none;
+} 
+.tag1{
+    display: grid;
+    grid-column: 1/2;
+    align-self: center;
+}
+.tag2{
+    display: grid;
+    grid-column: 2/3;
+    align-self: center;
+}
+.tag3{
+    display: grid;
+    grid-column: 3/4;
+    align-self: center;
+}
+.tag4{
+    display: grid;
+    grid-column: 1/2;
+    align-self: center;
+}
+.tag5{
+    display: grid;
+    grid-column: 2/3;
+    align-self: center;
+}
+.tag6{
+    display: grid;
+    grid-column: 3/4;
+    align-self: center;
+}
 .logo{
+    grid-column: 2/3;
     width: 100px;
-    padding: 10px;
+    margin: 0 auto;
+    align-self: center;
+    z-index: 2;
+    padding: 20px;
 }
 .cover_img{
     width: 100%;
@@ -48,15 +120,19 @@ body{
     text-align: center;
 }
 i{
-    color: #e4e2dd;
+    color: white;
     font-size: 35px;
     align-items: center;
     padding-left: 5px;
     padding-right: 5px;
 }
+i:hover{
+    color: #0ef;
+    text-decoration: none;
+}
 footer{
     height: 100px;
-    color: #e4e2dd;
+    color: white;
     background-color: #292929;
     margin: 0 auto;
     display: flex;
@@ -65,9 +141,11 @@ footer{
 }
 footer p{
     font-size: 1em;
+    font-family: 'Anta', Courier, monospace;
+    font-weight: bold;
 }
 footer a{
-    color: #e4e2dd;
+    color: white;
     text-decoration: none;
 }
 footer a:hover{
