--- a/final-project/styles/contact.css
+++ b/final-project/styles/contact.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Anta&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+html {
+    scroll-behavior: smooth;
+}
 header{
     display: grid;
     width: 100%;
@@ -119,7 +121,49 @@ body{
     max-width: 1600px;
     margin: auto;
 }
-.title{
+.top-section{
+    margin: 50px;
+    position: absolute;
+    top: 80px;
+    left: 0%;
+    right: 0%;
+    text-align: center;
+}
+.home-title{
+    font-size: 3.5em;
+}
+h1{
+    font-family: 'Anta', Courier, monospace;
+    font-weight: bold;
+    font-size: 3em;
+    color: white;
+}
+.top-section p{
+    font-family:'Anta', Courier, monospace;
+    font-size: 1.8em;
+    color: white;
+    margin-top: -20px;
+    padding-bottom: 20px;
+    font-weight: bold;    
+}
+#fill-out{
+    background-color: white;
+    color: #292929;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 10px;
+    font-family: 'Anta', Courier, monospace;
+    transform: scale(1) translateY(-5px);
+    transition: .5s;
+    font-weight: bold;
+}
+#fill-out:hover{
+    background-color: #0ef;
+    color: white;
+}
+#title{
     padding-left: 40px;
     font-family:'Anta', Courier, monospace;
     font-weight: bold;
