--- a/final-project/styles/index.css
+++ b/final-project/styles/index.css
@@ -366,7 +366,7 @@ footer a:hover{
     }
     footer {
         display: block;
-        width: 400px;
+        width: 95%;
         padding: 0;
         margin: 0 auto;
         margin-top: 25px;
