--- a/final-project/styles/booknow.css
+++ b/final-project/styles/booknow.css
@@ -1,62 +1,327 @@
+@import url('https://fonts.googleapis.com/css2?family=Anta&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 header{
+    display: grid;
     width: 100%;
     background-color: #292929;
+    grid-template-columns: 1fr 300px 1fr;
 }
-nav{
+.left-nav{
+    display: grid;
+    grid-template-columns: 1f 1fr 1fr;
+    grid-column: 1/2;
     width: 100%;
     list-style-type: none;
-    display: grid;
-    color: #e4e2dd;
-    grid-template-columns: 1fr 1fr 1fr 400px 1fr 1fr 1fr;
+    color: white;
     text-align: center;
     font-size: 1.2em;
-    padding-top: 20px;
+    column-gap: 10px;
 }
-nav a{
-    color: #e4e2dd;
+.left-nav a{
+    color: white;
     position: relative;
     font-size: 0.8em;
     min-width: 80px;
     text-decoration: none;
     transition: .5s;
-}   
-    
-nav a:hover {
-    color: #e4e2dd;
+    font-family: 'Anta', Courier, monospace;
+    font-weight: bold;
+}
+.left-nav a:hover {
+    color: #0ef;
+    padding-bottom: 10px;
     border-bottom: 2px solid #0ef;
     border-radius: 15px;
     transform: scale(1) translateY(-5px);
     transition: .5s;
 }
-.tag{
+.right-nav{
+    display: grid;
+    grid-template-columns: 1f 1fr 1fr;
+    grid-column: 3/4;
+    width: 100%;
+    list-style-type: none;
+    color: white;
+    text-align: center;
+    font-size: 1.2em;
+    column-gap: 10px;
+}
+.right-nav a{
+    color: white;
+    position: relative;
+    font-size: 0.8em;
+    min-width: 80px;
+    text-decoration: none;
+    transition: .5s;
+    font-family: 'Anta', Courier, monospace;
+    font-weight: bold;
+}
+.right-nav a:hover {
+    color: #0ef;
+    padding-bottom: 10px;
+    border-bottom: 2px solid #0ef;
+    border-radius: 15px;
+    transform: scale(1) translateY(-5px);
+    transition: .5s;
+}
+.left-nav a{
     width: 100%;
     text-decoration: none;
-    padding-top: 25px;
 } 
-.logo{
-    width: 100px;
-    padding: 10px;
+.right-nav a{
+    width: 100%;
+    text-decoration: none;
+} 
+.tag1{
+    display: grid;
+    grid-column: 1/2;
+    align-self: center;
 }
+.tag2{
+    display: grid;
+    grid-column: 2/3;
+    align-self: center;
+}
+.tag3{
+    display: grid;
+    grid-column: 3/4;
+    align-self: center;
+}
+.tag4{
+    display: grid;
+    grid-column: 1/2;
+    align-self: center;
+}
+.tag5{
+    display: grid;
+    grid-column: 2/3;
+    align-self: center;
+}
+.tag6{
+    display: grid;
+    grid-column: 3/4;
+    align-self: center;
+}
+.logo{
+    grid-column: 2/3;
+    width: 100px;
+    margin: 0 auto;
+    align-self: center;
+    z-index: 2;
+    padding: 20px;
+}
+
 .cover_img{
     width: 100%;
-    margin-top: -150px;
+    margin-top: -125px;
 }
 body{
     max-width: 1600px;
     margin: auto;
     text-align: center;
 }
+.top-section{
+    margin: 50px;
+    position: absolute;
+    top: 80px;
+    left: 0%;
+    right: 0%;
+}
+.home-title{
+    font-size: 3.5em;
+}
+.top-section p{
+    font-family:'Anta', Courier, monospace;
+    font-size: 1.8em;
+    color: white;
+    margin-top: -20px;
+    padding-bottom: 20px;
+    font-weight: bold;
+    
+}
+#see-more{
+    background-color: white;
+    color: #292929;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 10px;
+    font-family: 'Anta', Courier, monospace;
+    transform: scale(1) translateY(-5px);
+    transition: .5s;
+    font-weight: bold;
+}
+#see-more:hover{
+    background-color: #0ef;
+    color: white;
+}
+
+h1{
+    font-family: 'Anta', Courier, monospace;
+    font-weight: bold;
+    font-size: 3em;
+    color: white;
+}
+#title{
+    padding-left: 40px;
+    font-family:'Anta', Courier, monospace;
+    font-weight: bold;
+    font-size: 30px;
+    margin-top: 70px;
+}
+main p{
+    padding-left: 8%;
+    font-family:'Anta', Courier, monospace;
+    font-weight: 500;
+    font-size: 1.1em;
+    margin-bottom: 30px;
+}
+.row {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+    margin: 0 -16px;
+}
+
+.col-50{
+    -ms-flex: 75%; /* IE10 */
+    flex: 75%;
+}
+
+.contact-form, .col-75 {
+    -ms-flex: 75%; /* IE10 */
+    flex: 75%;
+    padding: 0 110px;
+}
+
+.form-title{
+    padding-left: 20px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
+
+.col-50{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 40px 1fr 40px 1fr 40px 1fr 40px 1fr;
+}
+
+.container {
+    background-color: #f2f2f2;
+    padding: 15px 25px 15px 20px;
+    border: 1px solid lightgrey;
+    border-radius: 20px;
+    margin-bottom: 80px;
+}
+
+input[type=text] {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+label {
+    margin-bottom: 10px;
+    display: block;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-left: 5px;
+}
+
+.icon-container {
+    margin-bottom: 20px;
+    padding: 7px 0;
+    font-size: 24px;
+}
+
+#lbl-name{
+    grid-column: 1/2;
+    grid-row: 1/2;
+    align-self: center;
+    margin-bottom: 0;
+}
+#ent-fname{
+    grid-column: 1/2;
+    grid-row: 2/3;
+    align-self: center;
+    width: 86%;
+
+}
+#ent-lname{
+    grid-column: 2/3;
+    grid-row: 2/3;
+    align-self: center;
+    width: 86%;
+}
+#lbl-email{
+    grid-column: 1/2;
+    grid-row: 3/4;
+    align-self: center;
+    margin-bottom: 0;
+}
+#ent-email{
+    grid-column: 1/3;
+    grid-row: 4/5;
+    align-self: center;
+    width: 93%;
+}
+#lbl-sub{
+    grid-column: 1/2;
+    grid-row: 5/6;
+    align-self: center;
+    margin-bottom: 0;
+}
+#ent-sub{
+    grid-column: 1/3;
+    grid-row: 6/7;
+    align-self: center;
+    width: 93%;
+}
+#lbl-msg{
+    grid-column: 1/2;
+    grid-row: 7/8;
+    align-self: center;
+    margin-bottom: 0;
+}
+#ent-msg{
+    grid-column: 1/3;
+    grid-row: 8/9;
+    align-self: center;
+    width: 93%;
+}
+
+.btn {
+    background-color: #292929;
+    color: white;
+    padding: 12px;
+    margin: 10px 0;
+    margin-left: 15px;
+    border: none;
+    width: 125px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 17px;
+}
+
+.btn:hover {
+    background-color: #0ef;
+}
 i{
-    color: #e4e2dd;
+    color: white;
     font-size: 35px;
     align-items: center;
     padding-left: 5px;
     padding-right: 5px;
 }
+i:hover{
+    color: #0ef;
+    text-decoration: none;
+}
 footer{
     height: 100px;
-    color: #e4e2dd;
+    color: white;
     background-color: #292929;
     margin: 0 auto;
     display: flex;
@@ -65,9 +330,11 @@ footer{
 }
 footer p{
     font-size: 1em;
+    font-family: 'Anta', Courier, monospace;
+    font-weight: bold;
 }
 footer a{
-    color: #e4e2dd;
+    color: white;
     text-decoration: none;
 }
 footer a:hover{
