--- a/final-project/styles/portfolio.css
+++ b/final-project/styles/portfolio.css
@@ -2,7 +2,7 @@
 html {
     scroll-behavior: smooth;
 }
-*{
+#gallery *{
     box-sizing: border-box;
 }
 
@@ -118,13 +118,12 @@ header{
 }
 .cover_img{
     width: 100%;
-    margin-top: -100px;
+    margin-top: -125px;
 }
 body{
     max-width: 1600px;
     margin: auto;
     text-align: center;
-    font-family:'Anta', Courier, monospace;
 }
 .top-section{
     margin: 50px;
@@ -135,6 +134,7 @@ body{
 }
 .home-title{
     font-size: 3.5em;
+    color: white;
 }
 .top-section p{
     font-family:'Anta', Courier, monospace;
@@ -143,6 +143,7 @@ body{
     margin-top: -20px;
     padding-bottom: 20px;
     font-weight: bold;
+    
 }
 #see-more{
     background-color: white;
@@ -165,7 +166,7 @@ h1{
     font-family: 'Anta', Courier, monospace;
     font-weight: bold;
     font-size: 3em;
-    color: white;
+    color: #292929;
 }
 h2{
     padding-top: 50px;
@@ -174,9 +175,16 @@ h2{
     color: #292929;
     font-size: 40px;
 }
+.header p{
+    font-family: 'Anta', Courier, monospace;
+    font-size: 1.2em;
+}
 main{
     text-align: center;
     margin: 0;
+}
+.sub-title{
+    padding-top: 20px;
 }
 .row {
     display: -ms-flexbox; /* IE 10 */
@@ -218,7 +226,7 @@ main{
 .btn.active {
     background-color: #666;
     color: white;
-  }
+}
 a i{
     color: white;
     font-size: 35px;
