--- a/final-project/styles/portfolio.css
+++ b/final-project/styles/portfolio.css
@@ -14,7 +14,7 @@ header{
 }
 .left-nav{
     display: grid;
-    grid-template-columns: 1f 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-column: 1/2;
     width: 100%;
     list-style-type: none;
@@ -32,6 +32,7 @@ header{
     transition: .5s;
     font-family: 'Anta', Courier, monospace;
     font-weight: bold;
+    max-width: 180px;
 }
 .left-nav a:hover {
     color: #0ef;
@@ -43,7 +44,7 @@ header{
 }
 .right-nav{
     display: grid;
-    grid-template-columns: 1f 1fr 1fr;
+    grid-template-columns: 1f 1fr;
     grid-column: 3/4;
     width: 100%;
     list-style-type: none;
@@ -61,6 +62,7 @@ header{
     transition: .5s;
     font-family: 'Anta', Courier, monospace;
     font-weight: bold;
+    max-width: 180px;
 }
 .right-nav a:hover {
     color: #0ef;
@@ -82,31 +84,25 @@ header{
     display: grid;
     grid-column: 1/2;
     align-self: center;
+    margin: auto;
 }
 .tag2{
     display: grid;
     grid-column: 2/3;
     align-self: center;
+    margin: auto;
 }
 .tag3{
     display: grid;
-    grid-column: 3/4;
+    grid-column: 1/2;
     align-self: center;
+    margin: auto;
 }
 .tag4{
     display: grid;
-    grid-column: 1/2;
-    align-self: center;
-}
-.tag5{
-    display: grid;
     grid-column: 2/3;
     align-self: center;
-}
-.tag6{
-    display: grid;
-    grid-column: 3/4;
-    align-self: center;
+    margin: auto;
 }
 .logo{
     grid-column: 2/3;
