--- a/final-project/styles/contact.css
+++ b/final-project/styles/contact.css
@@ -7,6 +7,7 @@ header{
     width: 100%;
     background-color: #292929;
     grid-template-columns: 1fr 300px 1fr;
+    font-size: 1.2em;
 }
 .left-nav{
     display: grid;
@@ -386,14 +387,6 @@ footer a:hover{
         padding-bottom: 5px;
     }
     .tag4{
-        padding-top: 10px;
-        padding-bottom: 5px;
-    }
-    .tag5{
-        padding-top: 10px;
-        padding-bottom: 5px;
-    }
-    .tag6{
         padding-top: 10px;
         padding-bottom: 5px;
     }
