--- a/final-project/styles/index.css
+++ b/final-project/styles/index.css
@@ -5,6 +5,7 @@ header{
     width: 100%;
     background-color: #292929;
     grid-template-columns: 1fr 300px 1fr;
+    font-size: 1.2em;
 }
 .left-nav{
     display: grid;
@@ -171,12 +172,13 @@ body{
 #purpose p{
     grid-column: 4/5;
     grid-row: 3/4;
-    align-self: center;
     font-size: 20px;
+    align-self: center;
     padding-top: 30px;
     font-family: 'Anta', Courier, monospace;
     font-weight: 400;
     line-height: 1.6em;
+    text-align: justify;
 }
 #about-us{
     background-color: #292929;
@@ -319,14 +321,6 @@ footer a:hover{
         padding-bottom: 5px;
     }
     .tag4{
-        padding-top: 10px;
-        padding-bottom: 5px;
-    }
-    .tag5{
-        padding-top: 10px;
-        padding-bottom: 5px;
-    }
-    .tag6{
         padding-top: 10px;
         padding-bottom: 5px;
     }
