--- a/final-project/styles/aboutus.css
+++ b/final-project/styles/aboutus.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Anta&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+html {
+    scroll-behavior: smooth;
+}
 header{
     display: grid;
     width: 100%;
@@ -159,14 +161,15 @@ h1{
     background-color: #0ef;
     color: white;
 }
-.bottom-section{
+#bottom-section{
     display: grid;
     grid-template-columns: 1fr 405px 405px 1fr 1fr;
     grid-template-rows: 270px 270px 270px;
+    padding: 20px;
     margin: 100px 100px 40px 100px;
     gap: 15px;
 }
-.bottom-section p{
+#bottom-section p{
     font-family: 'Anta', Courier, monospace;
     font-weight: 550;
     font-size: 1.15em;
