--- a/final-project/styles/contact.css
+++ b/final-project/styles/contact.css
@@ -397,7 +397,7 @@ footer a:hover{
         padding: 0;
     }
     .top-section {
-        margin-top: 50px;
+        margin-top: 0px;
         position: absolute;
         top: 300px;
     }
@@ -405,13 +405,19 @@ footer a:hover{
         font-size: 1.2em;
     }
     .home-title {
-        font-size: 35px;
+        font-size: 30px;
     }
     .row {
         flex-direction: column-reverse;
     }
     .btn{
         padding: 24px;
+    }
+    #fill-out{
+        font-size: 18px;
+        padding: 10px 20px;
+        margin-top: 40px;
+        border-radius: 10px;
     }
     .contact-form, .col-75 {
         -ms-flex: 75%; /* IE10 */
