--- a/final-project/styles/index.css
+++ b/final-project/styles/index.css
@@ -337,7 +337,7 @@ footer a:hover{
         margin-top: 0;
     }
     .top-section {
-        margin-top: 50px;
+        margin-top: 0px;
         position: absolute;
         top: 300px;
     }
@@ -345,7 +345,13 @@ footer a:hover{
         font-size: 1.2em;
     }
     .home-title {
-        font-size: 35px;
+        font-size: 30px;
+    }
+    #see-more{
+        font-size: 18px;
+        padding: 10px 20px;
+        margin-top: 40px;
+        border-radius: 10px;
     }
     .section1, .section2, .section3, .section4 { 
         margin: 50px auto;
